ags (1.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed accessing uninitialized pointer in ags_simple_file.c
	* fixed cursor positioning in AgsAutomationEditor
	* improved position labels of AgsNotationToolbar and AgsAutomationToolbar
	* updated ags_notation_test_find_near_timestamp() and ags_automation_test_find_near_timestamp()
	* minor-fixes in ags.rc

ags (1.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented 4 paste modes of notation and automation editor
	* implemented AgsScale, AgsScaleBox, AgsVScaleBox, AgsHScaleBox and AgsScrolledScaleBox in libags-gui
	* implemented segmented automation
	* refactored AgsAutomationEditor
	* extended chap1.xml added sections about AgsMainLoop and common interfaces
	* extended all chapters to provide code tag to functions and added parameter types
	* fixed direct callback connect from libags-audio in ags_notation_editor.c
	* fixed missing callback AgsMachine::resize-audio-channels connect in ags_notation_editor.c

ags (1.2.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_channel_get_level()
	* implemented ags_channel_recursive_reset_recall_id()
	* implemented ags_channel_recursive_init()
	* implemented ags_channel_recursive_run()
	* implemented ags_channel_recursive_cancel()
	* refactored ags_channel_recursive_play_init()
	* refactored ags_channel_recursive_play()
	* refactored ags_channel_recursive_play_threaded()
	* refactored ags_channel_recursive_reset_recall_ids()
	* improved ags_channel_set_recycling()
	* improved ags_channel_recursive_reset_recycling_context()

ags (1.2.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* disable fatal mask
	* minor fixes

ags (1.2.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV due to NULL pointer dereference in ags_append_audio.c task

ags (1.2.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor-fixes

ags (1.2.3)
