@@ -1,3 +1,10 @@
+ags (1.3.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed possible unitialized AgsAudioSignal in AgsApplySynth
+	* fixed all wrong string vector static initializers from char **strv to char *strv[]
+	* fixed arbritary return in drawing functions without destroying cairo_t
+
 ags (1.3.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
